tests/scan_type_fRes.err
Type error: Type mismatch in return type of predicate and array-element types in scan: expected equal types, but got bool and int at line 7, column 11
