tests/scan_type_fRes.fo
fun bool incr(int a, int b) = false

fun int writeInt(int n) = write(n)

fun [int] main() =
  let a = {1, 2, 3} in
  let b = scan(incr, 0, a) in
  map(writeInt, b)
